Thu Apr 11 14:42:32 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/ARGV.h:  Replaced include of ACE.h with config-all.h.

	* ace/Addr.cpp: 
	* ace/OS_Dirent.cpp:
	* ace/Trace.cpp:

	  Added include of OS.h.
	
	* apps/gperf/src/Bool_Array.cpp: Changed ACE_OS::memset() to
	  ACE_OS_String::memset() and added include of OS_String.h.

	* tests/Log_Msg_Test.cpp:  
	* examples/Logger/Acceptor-server.cpp:
	* examples/Logger/simple-server/Logging_Handler.cpp:
	* examples/Log_Msg/test_callback.cpp:
	
	  Added includes of Log_Record.h.
	
	* ace/Log_Msg.{h,cpp}:

	  Added new method, last_error_adapter(), and changed the
	  ACE_DEBUG, et al, macros to use new method instead of 
	  ACE_OS::last_error().  Removed includes of OS.h and 
	  Log_Record. Changed ACE_Log_Record::MAXLOGMSGLEN to
	  ACE_MAXLOGMSGLEN.  Removed ACE_OS::cleanup_tss friend.

	* ace/Basic_Types.h:  Added definition of MAXPATHLEN and 
	  typedef of ACE_thread_t to prevent need to include OS.h
	  in Log_Msg.h above.

	* ace/Default_Constants.h:  
	* ace/OS.h:  

	  Moved definitions of ACE_MAXLOGMSGLEN, ACE_MAXTOKENNAMELEN, 
	  and ACE_MAXCLIENTIDLEN here from OS.h.

Thu Apr 11 14:26:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Timer_Hash_T.h:
        * Timer_Heap_T.h:
        * Timer_List_T.h:
        * Timer_Wheel_T.cpp:
        * Timer_Wheel_T.h:
          The timer queue classes schedule timers using absolute time. The
          describtion in the implementaton files correctly described this,
          but the header file comment and the argument name where describing
          that the queues work on delta timers, so corrected this.

        * Timer_Queue_Adapters.cpp:
        * Timer_Queue_Adapters.h:
          Updated the describtion that the schedule method expects an absolute
          time.

Thu Apr 11 13:29:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/String_Base.h:
          Fixed some small typo in comment
